# solana-wallet-production

./: 404.html  README.md  index.html  index.txt
.github/workflows/: deploy.yml
_next/static/chunks/: 2-6a1ed2065e4aea1a.js  299-f345e4c160843b68.js  3.934f75a3ac6376f2.js  3a91511d-50e592c1dadff38b.js  429-a371642d7baf61a7.js  466-b806b03d9344e138.js  684-487eabd62ef26919.js  688-199d46147b27663d.js  878.499d6496785c64f3.js  main-1e6b021b7e8fe0ed.js  main-app-b571c2f7bc0027f3.js  webpack-503eb2275cb53110.js  webpack-d0978ac0813fa11a.js
_next/static/chunks/app/: layout-05979b8cb3e0d9b8.js  layout-52375c839f6bdebc.js  page-119ad8519d5be7a9.js  page-2e994c6484d38d84.js  page-c319e70c59f7832f.js  page-fa7fd317b90d6732.js
_next/static/css/: 93414f68ff4cf8f0.css  9e5e8efcdb8bcb54.css  b6deff3fead75010.css  bfc5a44d9987939e.css  efb5321562bdfc1c.css  f63b9c4a410d332b.css
solana-wallet/: .dockerignore  Cargo.toml  Dockerfile  README.md  build-and-test.sh
solana-wallet-integration/: package-lock.json  package.json
solana-wallet-integration (2)/components/: solana-provider.tsx  transaction-history.tsx
solana-wallet-integration (2)/lib/: api.ts
solana-wallet-integration/app/: globals.css  layout.tsx  page.tsx
solana-wallet-integration/app/api/balance/[pubkey]/: route.ts
solana-wallet-integration/components/: send-sol-form.tsx  sol-airdrop.tsx  transaction-history.tsx  wallet-button.tsx  wallet-info.tsx  wallet-provider.tsx
solana-wallet-integration/lib/: api.ts  solana-client.ts
solana-wallet/src/: handlers.rs  main.rs
(+4 files in other folders)
