[package]
name = "solana-wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.98"
env = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
solana-client = "2.3.7"
solana-sdk = "2.3.1"
solana-transaction-status = "2.3.7"
tokio = { version = "1.47.1", features = ["full"] }
